--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,9 +29,10 @@
     "rootDir": "src" /* Specify the root folder within your source files. */,
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",
-    // "paths": {
-    //   "@infrastructure/*": ["src/core/*"]
-    // },
+    "paths": {
+      "@presentation/*": ["src/core/presentation/*"],
+      "@adapters/*": ["src/common/config/adapters/*"]
+    },
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
