--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.4.1",
+    "ansi-colors": "^4.1.3",
     "bcrypt": "^5.1.1",
+    "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "env-var": "^7.4.1",
     "express": "^4.18.2",
