--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "env-var": "^7.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
