--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_USER: CleanArchitecture
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: bHJVJFDSEJFDJe^t587GTD&*f
       POSTGRES_DB: CleanArchitecture
     volumes:
